<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="question">This is a question</string>
    <string name="app_name">personnalBrainTrain</string>
    <string name="answer0">answer1</string>
    <string name="answer1">answer2</string>
    <string name="answer2">answer3</string>
    <string name="welcome">welcome</string>
    <string name="TimeAttack">TimeAttack!!</string>
    <string name="survival">survival</string>
    <string name="editableText">editableText</string>
    <string name="score">score</string>
    <string name="great">great</string>
    <string name="countdown">CountDown</string>
</resources>
