<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:id="@id/textView" android:layout_gravity="center|right" android:focusable="true"/>
    <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/imageButton" android:layout_gravity="center" android:src="@drawable/icon"
            android:contentDescription="none"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/timeAttack" android:layout_gravity="center"
            android:text="@string/TimeAttack"
            android:contentDescription="none"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/countdownTextView" android:layout_gravity="center"
            android:text="@string/countdown"
            android:contentDescription="none"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/survival" android:layout_gravity="center"
            android:text="@string/survival"
            android:contentDescription="none"/>
</LinearLayout>